# encore-switch-port

./: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Encore.nsp  README.md  cmake_install.cmake  compile_commands.json
.github/workflows/: build.yml
Encore/: Makefile  cmake_install.cmake  raylib.pc
Encore/include/: fstream  functional  newlib.h
Encore/include/aarch64-none-elf/bits/: gthr.h
Encore/include/bits/: basic_string.h  basic_string.tcc
Encore/source/: MenuManager.cpp  MenuManager.h  band.h  binary.h  enclog.cpp  enclog.h  main.c  main.cpp  song.c  song.h
EncoreSwitchPort/: toolchain.cmake
EncoreSwitchPort/Encore/lib/switch/: CMakeLists.txt  switch-toolchain.cmake
EncoreSwitchPort/build-switch/: CMakeCache.txt
EncoreSwitchPort/raylib-nx/: CMakeLists.txt
EncoreSwitchPort/tools/json-build/: Makefile  cmake_install.cmake  nlohmann_json.pc
EncoreSwitchPort/tools/json-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
EncoreSwitchPort/tools/raylib-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
EncoreSwitchPort/tools/raylib-build/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  (+1 more)
EncoreSwitchPort/tools/raylib-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-switch/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-switch/Encore/: cmake_install.cmake
switch-game/: Makefile  config.json
switch-game/include/: raygui.h
switch-game/source/: main.c  textures_logo_raylib.c
(+12 files in other folders)
