cmake_minimum_required(VERSION 3.13)
project(Encore LANGUAGES CXX)
set(CMAKE_SYSTEM_NAME NintendoSwitch)
include($ENV{DEVKITPRO}/cmake/Switch.cmake)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I$ENV{DEVKITPRO}/portlibs/switch/include -I/c/Users/jayde/EncoreSwitchPort/raylib-nx/src")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L$ENV{DEVKITPRO}/portlibs/switch/lib")
file(GLOB_RECURSIVE SOURCES src/*.cpp)
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} /c/Users/jayde/EncoreSwitchPort/raylib-nx/cmake-build-switch/libraylib.a)
nx_generate_nacp(${PROJECT_NAME}.nacp)
nx_create_nro(${PROJECT_NAME})